# impacted-areas-identification-processor

./: .env  .env.sample  .gitignore  Dockerfile  MANIFEST.in  README.md  byoa.toml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py
manifests/: impacted_areas_identification_processor.yaml  impacted_areas_identification_processor_svc.yaml
notebooks/: impacted_areas_identification.ipynb  impacted_areas_identification_processor.ipynb
src/: main.py  test.py
src/api/: api.py  constants.py
src/data/: processor_input_example.json
src/impacted_areas_identification_processor/: cloud_storage_provider.py  processor.py  utils.py  vegetation_index.py
src/schemas/: input_schema.py  output_schema.py
src/utils/: file_utils.py
src/vegetation_index_impacted_areas_identificator/: __init__.py  impacted_areas_identification.py  utils.py  vegetation_index.py  vegetation_index_calculator.py
