[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "impacted_areas_identification_processor"
version = "0.0.1"
description = ""
authors = [
 { name = "" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where =["src"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["line-too-long","too-many-arguments","inconsistent-return-statements","too-few-public-methods","too-many-locals","too-many-instance-attributes"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
ignore_missing_imports = true
exclude = ['tests', 'docs']

[tool.pylint.main]
ignore-patterns = ["^tests\\.*\\.py", "^docs\\.*\\.py"]